--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "composite": true,
+    
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
