--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "experience-musicale-generative",
+  "name": "@socle-commun/virtual-troubadour",
   "private": true,
   "version": "0.0.0",
   "type": "module",
